// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TermsOfUse renders correctly after loading terms 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "marginBottom": 16,
      }
    }
  >
    <View
      allowsBackForwardNavigationGestures={true}
      bounces={false}
      domStorageEnabled={true}
      javaScriptEnabled={true}
      mixedContentMode="compatibility"
      onError={[Function]}
      onHttpError={[Function]}
      onLoad={[Function]}
      originWhitelist={
        [
          "*",
        ]
      }
      renderLoading={[Function]}
      sharedCookiesEnabled={true}
      source={
        {
          "baseUrl": "",
          "html": "<!DOCTYPE html>
<html>
<head>
<meta name="viewport" content="width=device-width, initial-scale=1">
<style>
  body {
    background-color: #F2F2F2;
    color: #313132;
    font-family: -apple-system, system-ui, sans-serif;
    font-size: 32px !important;
    padding: 0 16px 16px 16px;
    line-height: 1.6;
    margin: 0;
  }
  body, body * {
    background-color: #F2F2F2 !important;
    color: #313132 !important;
  }
  p, li, dd, dt {
    margin-bottom: 0.75em;
  }
  a, a *, a:visited, a:visited *, a:hover, a:hover *, a:active, a:active * {
    color: #1A5A96 !important;
    text-decoration-color: #1A5A96 !important;
    border-color: #1A5A96 !important;
  }
</style>
</head>
<body>
<h4>BCSC.Onboarding.TermsOfUseHeader</h4>
<p>BCSC.Onboarding.TermsOfUseSubtitle<br/>BCSC.Onboarding.TermsOfUseVersion 1.0, January 1, 2024</p>
<p>Terms of Use content</p>
</body>
</html>",
        }
      }
      startInLoadingState={true}
      style={
        {
          "backgroundColor": "#F2F2F2",
        }
      }
      testID="mocked-webview"
      textZoom={200}
      thirdPartyCookiesEnabled={true}
      userAgent="BCServicesCard/4.0.0 (iOS 17.4; Build 142)"
    />
  </View>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityLabel="BCSC.Onboarding.AcceptAndContinueButton"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#757575",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/AcceptAndContinue"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                  ],
                ]
              }
            >
              BCSC.Onboarding.AcceptAndContinueButton
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`TermsOfUse shows loading indicator while fetching terms 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        false,
        {
          "flex": 1,
          "padding": 24,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          size="large"
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityLabel="BCSC.Onboarding.AcceptAndContinueButton"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#757575",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/AcceptAndContinue"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                  ],
                ]
              }
            >
              BCSC.Onboarding.AcceptAndContinueButton
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
